# ADDRESS

./: CMakeLists.txt  README.md
glfw-3.3.2/examples/: heightmap.c  splitview.c  wave.c
glfw-3.3.2/tests/: inputlag.c
include/glad/: glad.h
include/imgui/: imgui.cpp  imgui_impl_glfw_gl3.cpp  stb_truetype.h
libWindows/: glad.lib
shaders/: axis-frag.glsl  axis-vert.glsl  diagramHR-frag.glsl  diagramHR-vert.glsl  grid-frag.glsl  grid-vert.glsl  mouseClick-vert.glsl  mouseClick2D-vert.glsl  mouseClickHR-frag.glsl  mouseClickHR-vert.glsl  plot2D-frag.glsl  plot2D-vert.glsl  scope-frag.glsl  scope-geom.glsl  scope-vert.glsl  spaceVelocity-frag.glsl  spaceVelocity-geom.glsl  spaceVelocity-vert.glsl  star3d-frag.glsl  star3d-vert.glsl
src/: Axis.cpp  Axis.h  Camera.cpp  Camera.h  FileDialog.cpp  FileDialog.h  GUI.cpp  GUI.h  Grid.cpp  Grid.h  OpenFileDialogLINUX.cpp  OpenFileDialogLINUX.h  OpenFileDialogWINDOWS.cpp  OpenFileDialogWINDOWS.h  Parameters.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Star.cpp  Star.h  StarCatalog.cpp  StarCatalog.h  Utils.cpp  Utils.h  VAO.cpp  VAO.h  main.cpp
